--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <a href="#" class="nav-link mx-3">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link mx-3">About</a>
+            <a href="#about" class="nav-link mx-3">About</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link mx-3">Follow</a>
+            <a href="#follow" class="nav-link mx-3">Follow</a>
           </li>
         </ul>
       </div>
@@ -90,7 +90,7 @@
 
     <!-- section 2 Start -->
 
-    <div class="section2 p-5 container-fluid">
+    <div id="about" class="section2 p-5 container-fluid">
       <div class="section2-text text-center">
         <h1 class="display-3 text-white">VR's Surprising Benifits</h1>
         <p class="text-white">Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
@@ -299,14 +299,14 @@
 
     <!-- section 8 Start -->
 
-    <div class=" section8 container-fluid p-5 d-flex align-items-center">
+    <div id="follow" class=" section8 container-fluid p-5 d-flex align-items-center">
         <h1 class="display-4 ps-2 ps-sm-4 pt-5 pt-sm-0">follow us!</h1>
         <div class="svg d-flex my-4">
-          <a href="https://www.youtube.com/watch?v=zdtHCSvTrp0" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/facebook.svg" alt="" style="width: 2em;"></a>
-          <a href="https://www.youtube.com/watch?v=zdtHCSvTrp0" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/instagram.svg" alt="" style="width: 2em;"></a>
-          <a href="https://www.youtube.com/watch?v=zdtHCSvTrp0" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/linkedin.svg" alt="" style="width: 2em;"></a>
-          <a href="https://www.youtube.com/watch?v=zdtHCSvTrp0" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/pinterest.svg" alt="" style="width: 2em;"></a>
-          <a href="https://www.youtube.com/watch?v=zdtHCSvTrp0" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/twitter.svg" alt="" style="width: 2em;"></a>
+          <a href="https://www.frontendmentor.io/profile/Mr-jaw" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/facebook.svg" alt="" style="width: 2em;"></a>
+          <a href="https://www.frontendmentor.io/profile/Mr-jaw" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/instagram.svg" alt="" style="width: 2em;"></a>
+          <a href="https://www.frontendmentor.io/profile/Mr-jaw" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/linkedin.svg" alt="" style="width: 2em;"></a>
+          <a href="https://www.frontendmentor.io/profile/Mr-jaw" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/pinterest.svg" alt="" style="width: 2em;"></a>
+          <a href="https://www.frontendmentor.io/profile/Mr-jaw" target="_blank" class="px-3 px-sm-4"><img src="/svg/social media/twitter.svg" alt="" style="width: 2em;"></a>
         </div>
         <hr class="pb-5 pb-sm-0">
     </div>
